--- a/view/src/app/Components/HRMS/SubComponents/dashboard-hrms/dashboard-hrms.component.html
+++ b/view/src/app/Components/HRMS/SubComponents/dashboard-hrms/dashboard-hrms.component.html
@@ -7,12 +7,12 @@
                   <i class="material-icons account_balance">account_balance_wallet</i>
                </div>
                <div class="Card_Right">
-                  <h5 class="card_color_1"> Account Balnce </h5>
-                  <h6> Rs.2,00,00,000.00</h6>
+                  <h5 class="card_color_1"> Leaves </h5>
+                  <h6> 5 requests</h6>
                </div>
             </div>
              <div class="Card_Footer card_bg_1">
-               <span class="Card_Info"> Rs.5,000.00 Last Added </span>
+               <span class="Card_Info"> View More </span>
             </div>
          </div>
       </div>
@@ -23,12 +23,12 @@
                   <i class="material-icons assignment">   assignment   </i>
                </div>
                <div class="Card_Right">
-                  <h5 class="card_color_2 ">Logs Activity </h5>
-                  <h6>25 Logs</h6>
+                  <h5 class="card_color_2 ">Permissions </h5>
+                  <h6>10 requests</h6>
                </div>
             </div>
             <div class="Card_Footer card_bg_2">
-               <span class="Card_Info"> 45 Logs In last Day </span>
+               <span class="Card_Info"> View More </span>
             </div>
          </div>
       </div>
@@ -39,12 +39,12 @@
                   <i class="material-icons add_shopping"> add_shopping_cart  </i>
                </div>
                <div class="Card_Right">
-                  <h5 class="card_color_3"> Customer Leads</h5>
-                  <h6>25 Leads </h6>
+                  <h5 class="card_color_3"> Advance</h5>
+                  <h6>5 requests</h6>
                </div>
             </div>
             <div class="Card_Footer card_bg_3">
-               <span class="Card_Info">25 Leads In Last Day </span>
+               <span class="Card_Info">view More </span>
             </div>
          </div>
       </div>
