--- a/view/src/app/Components/Settings/Company-Settings/SubComponents/company-info-company-settings/company-info-company-settings.component.html
+++ b/view/src/app/Components/Settings/Company-Settings/SubComponents/company-info-company-settings/company-info-company-settings.component.html
@@ -1,50 +1,62 @@
-<div class="example-card right_section ng-star-inserted">
+<div class="Main_Section">
    <div class="row">
-      <div class="col-sm-6 text-center">
-         <img alt=" Company Image" src="assets/images/basic/pexels-photo-323705.jpeg" style="max-width:200px">
+      <div class="col-sm-6 text-center Left_Section">
+         <img class="company_img" alt="Company Image" src="assets/images/basic/pexels-photo-323705.jpeg">
             <div class="row">
-               <div class="col-sm-12 text-center"> <b> AASHI Technologies </b></div>
+               <div class="col-sm-12 text-center Static"> AASHI Technologies </div>
             </div>
             <hr>
             <div class="row">
-               <div class="col-sm-4 text-right"> <b> Address : </b></div>
-               <div class="col-sm-8 text-left"> 32- Sri Lakshmi Nagar, <br> Coimbatore, <br> TamilNadu, <br> India, </div>
+               <div class="col-sm-4 text-right Static">  Address : </div>
+               <div class="col-sm-8 text-left Data"> 32- Sri Lakshmi Nagar, <br> Coimbatore, <br> TamilNadu, <br> India, </div>
             </div>
             <hr>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-6 Right_Section">
          <div class="left-data">
             <br>
             <div class="row">
-               <div class="col-sm-4 text-right"> <b> Phone : </b></div>
-               <div class="col-sm-8 text-left">  +91 82201 25844 </div>
+               <div class="col-sm-4 text-right Static">  Phone : </div>
+               <div class="col-sm-8 text-left Data">  +91 98765 43210 </div>
             </div>
             <hr>
             <div class="row">
-               <div class="col-sm-4 text-right"> <b> Email : </b></div>
-               <div class="col-sm-8 text-left">  Kathiraashi@gmail.com </div>
+               <div class="col-sm-4 text-right Static">  Email : </div>
+               <div class="col-sm-8 text-left Data">  sample@gmail.com </div>
             </div>
             <hr>
             <div class="row">
-               <div class="col-sm-4 text-right"> <b> Website : </b></div>
-               <div class="col-sm-8 text-left">  www.Sambelwebsite.com </div>
+               <div class="col-sm-4 text-right Static">  Fax : </div>
+               <div class="col-sm-8 text-left Data">  +0427 1234 123 </div>
             </div>
             <hr>
             <div class="row">
-               <div class="col-sm-4 text-right"> <b> Company Type : </b></div>
-               <div class="col-sm-8 text-left"> Company Type </div>
+               <div class="col-sm-4 text-right Static">  Website : </div>
+               <div class="col-sm-8 text-left Data">  www.SampleWebsite.com </div>
             </div>
             <hr>
             <div class="row">
-               <div class="col-sm-4 text-right"> <b> Type Of Business :</b></div>
-               <div class="col-sm-8 text-left"> Type Of Business  </div>
+               <div class="col-sm-4 text-right Static">  Company Type : </div>
+               <div class="col-sm-8 text-left Data"> Company Type </div>
+            </div>
+            <hr>
+            <div class="row">
+               <div class="col-sm-4 text-right Static">  Company Registry :</div>
+               <div class="col-sm-8 text-left Data"> May 2017  </div>
+            </div>
+            <hr>
+            <div class="row">
+               <div class="col-sm-4 text-right Static">  Type Of Business :</div>
+               <div class="col-sm-8 text-left Data"> Type Of Business  </div>
             </div>
             <hr>
          </div>
       </div>
    </div>
-   <div class="edit-button ng-star-inserted">
-      <button class="editbutton" (click)="modelcompanyinfo()"> Edit </button>
+   <div class="edit-button">
+      <button (click)="modelcompanyinfo()" mat-mini-fab color="primary"> 
+         <i class="material-icons">edit</i> 
+      </button>
    </div>
 </div>
 
