--- a/view/src/app/Components/Settings/Company-Settings/SubComponents/company-info-company-settings/company-info-company-settings.component.css
+++ b/view/src/app/Components/Settings/Company-Settings/SubComponents/company-info-company-settings/company-info-company-settings.component.css
@@ -1,49 +1,36 @@
-.example-card {
+
+.Main_Section {
     width: 100%;
-}
-.right_section {
-    transition: box-shadow 280ms cubic-bezier(.4,0,.2,1);
     display: block;
     position: relative;
     padding: 24px;
     border-radius: 2px;
     background: #fff;
-    color: rgba(0,0,0,.87);
-    font-family: Roboto,"Helvetica Neue",sans-serif;
-    margin-top: 30px;
+    color: #4f6a7a;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    font-family: inherit;
+    font-size: 14px;
+    letter-spacing: 0.2px;
 }
-.text-center {
-    text-align: center!important;
-}
-img {
+.Left_Section .company_img {
     vertical-align: middle;
     border-style: none;
+    max-height: 225px;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    margin-bottom: 5px;
 }
-b, strong {
-    font-weight: bolder;
-    font-size:15px;
+.Static{
+    font-weight: 800;
+    color: #4f6a7a;
 }
-hr {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border: 0;
-    border-top: 1px solid rgba(0,0,0,.1);
-    box-sizing: content-box;
-    height: 0;
-    overflow: visible;
+.Data{
+    font-weight: 500;
+    color: #4f6a7a;
 }
 .edit-button{
     position: absolute;
     right: 10px;
     top: 10px;
 }
-.editbutton{
-    background-color: #49b660;
-    color: #ffffff;
-    width: 100%;
-    outline: none;
-    border: none;
-    border-radius: 3px;
-}   
 
 
