--- a/view/src/app/Components/Settings/Company-Settings/main-company-settings/main-company-settings.component.html
+++ b/view/src/app/Components/Settings/Company-Settings/main-company-settings/main-company-settings.component.html
@@ -1,18 +1,18 @@
 
 <div class="Page_Section">
   <div class="container-fluid">
-     <div class="Page_Idendity">
-   <div class="Page_Name">
-       <h5>COMPANY SETTINGS</h5>
-       </div>
-       <div class="Page_Track">
+      <div class="Page_Identity">
+         <div class="Page_Name">
+            <h5>COMPANY SETTINGS</h5>
+         </div>
+         <div class="Page_Track">
             <ul >
-              <li class="color">Settings</li>
-              <li>>></li>
+              <li class="HeaderName">Settings</li>
+              <li class="arrow">>></li>
               <li>Company Settings</li>
-              </ul>
-            </div>
-    </div>
+            </ul>
+         </div>
+      </div>
      <div class="Page_Content Company_Settings">
         <div class="Main_Section">
            <div class="Left_Section">
