--- a/view/src/app/models/settings/company_settings/model-companyinfo-companysettings/model-companyinfo-companysettings.component.html
+++ b/view/src/app/models/settings/company_settings/model-companyinfo-companysettings/model-companyinfo-companysettings.component.html
@@ -4,65 +4,76 @@
       <span data-dismiss="modal" (click)="bsModalRef.hide()">&times;</span>
   </div>
   <div class="Model_Body">
-   <div class="row">
-      <div class="col-sm-4 Form_Input">
-         Company Logo:<br>
-         <input type="text" placeholder="choosefile..">
-      </div>
-    <div class="col-sm-4 Form_Input">
-         Company Name:<br>
-         <input type="text">
-      </div><br>
-      <div class="col-sm-4 Form_Input">
-            state:<br>
-         <input type="text" >
-      </div>
-      <div class="col-sm-4 Form_Input">
-            Address:<br>
-         <input type="text"  >
-      </div>
-      <div class="col-sm-4 Form_Input">
-            pinCode:<br>
+      <div class="row">
+         <div class="col-sm-4 Form_Input">
+            <label> Company Logo : </label>
+            <input type="file">
+         </div>
+         <div class="col-sm-4 Form_Input">
+            <label> Company Name : </label>
+            <input type="text">
+         </div><br>
+         <div class="col-sm-4 Form_Input">
+            <label for="2"> Street :</label>
+            <input id="2" type="text" >
+         </div>
+         <div class="col-sm-4 Form_Input">
+            <label> City :</label>
+            <input type="text"  >
+         </div>
+         <div class="col-sm-4 Form_Input">
+            <label>State :</label>
             <input type="text" >
-      </div>
-      <div class="col-sm-4 Form_Input">
-            Phone No:<br>
-         <input type="text" >
-      </div>
-      <div class="col-sm-4 Form_Input">
-            Email:<br>    
-         <input type="text"  >
-      </div>
-      <div class="col-sm-4 Form_Input">
-            Website:<br>
-         <input type="text"  >
-      </div>
-      <div class="col-sm-4 Form_Select">
-            Company Type:<br>
+         </div>
+         <div class="col-sm-4 Form_Input">
+            <label>Country :</label>
+            <input type="text" >
+         </div>
+         <div class="col-sm-4 Form_Input">
+            <label>Phone No :</label>
+            <input type="text" >
+         </div>
+         <div class="col-sm-4 Form_Input">
+            <label> Email :</label>
+            <input type="text"  >
+         </div>
+         <div class="col-sm-4 Form_Input">
+            <label> Fax :</label>
+            <input type="text"  >
+         </div>
+         <div class="col-sm-4 Form_Input">
+            <label> Website :</label>
+            <input type="text"  >
+         </div>
+         <div class="col-sm-4 Form_Select">
+            <label>Company Type :</label>
             <select>
-                  <option disabled> Select One</option>
-                  <option> All </option>
-                  <option> Location1 </option>
-                  <option> Location2 </option>
-                  <option> Location3 </option>
-                  <option> Location4 </option>
-                  <option> Location5 </option>
-               </select>
-      </div>
-      <div class="col-sm-4 Form_Select">
-            Type Of Business:<br>
+               <option disabled></option>
+               <option> Company Type 1 </option>
+               <option> Company Type 2 </option>
+               <option> Company Type 3 </option>
+               <option> Company Type 4 </option>
+               <option> Company Type 5 </option>
+            </select>
+         </div>
+         <div class="col-sm-4 Form_Input">
+               <label> Website :</label>
+               <input type="text"  >
+            </div>
+         <div class="col-sm-4 Form_Select">
+            <label> Type Of Business :</label>
             <select>
-                  <option disabled> Select One</option>
-                  <option> All </option>
-                  <option> Location1 </option>
-                  <option> Location2 </option>
-                  <option> Location3 </option>
-                  <option> Location4 </option>
-                  <option> Location5 </option>
-               </select>
+               <option disabled></option>
+               <option> Type Of Business 1 </option>
+               <option> Type Of Business 2 </option>
+               <option> Type Of Business 3 </option>
+               <option> Type Of Business 4 </option>
+               <option> Type Of Business 5 </option>
+            </select>
+         </div>
       </div>
    </div>
    <div class="Model_Footer">
-      <span class="Submit_Btn" > Submit </span>
-  </div>
+      <button mat-raised-button color="primary" > Submit </button>
+   </div>
 </div>
