--- a/view/src/styles.css
+++ b/view/src/styles.css
@@ -2,8 +2,12 @@
 @import '../node_modules/primeng/resources/themes/omega/theme.css';
 @import '../node_modules/primeng/resources/primeng.min.css';
 
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 @import './assets/Over-Write-Css/ngx-bootstrap-overwrite.css';
 @import './assets/Over-Write-Css/Primeng-Overwrite.css';
+@import './assets/Over-Write-Css/material-overwrite.css';
+
 
 /* You can add global styles to this file, and also import other style files */
 body {
@@ -11,14 +15,17 @@ body {
     margin: 0;
     padding: 0;
   }
+*{
+    outline: none !important
+}
 .Bg_Success{
     background-color: #06a92c !important;
  }
  .Bg_warning{
-     background-color: #ff9b05 !important;
+     background-color: rgb(255, 157, 11) !important;
  }
  .Bg_Info{
-     background-color: #00a0ff !important;
+     background-color: rgb(13, 141, 216) !important;
  }
  .Bg_Danger{
      background-color: rgb(221, 10, 10) !important;
