--- a/view/src/app/Components/Inventory/Internal-Transfer/internal-transfer-list/internal-transfer-list.component.html
+++ b/view/src/app/Components/Inventory/Internal-Transfer/internal-transfer-list/internal-transfer-list.component.html
@@ -4,21 +4,21 @@
     <div class="container-fluid">
       <div class="Page_Identity">
         <div class="Page_Name">
-          <h5>Delivery Orders</h5>
+          <h5>Internal Transfers</h5>
         </div>
         <div class="Page_Track">
           <ul>
             <li class="HeaderName">Inventory</li>
             <li class="arrow">>></li>
-            <li class="LinkName">Delivery Orders</li>
+            <li class="LinkName">Internal Transfers</li>
             <li class="arrow">>></li>
-            <li>Delivery Orders List</li>
+            <li>Internal Transfers List</li>
           </ul>
         </div>
       </div>
       <div class="row header_part">
         <div class="col-sm-6">
-          <button class="Create_Button" mat-raised-button [routerLink]="['/inventory_deliveryorder_create']"> + Create </button>
+          <button class="Create_Button" mat-raised-button [routerLink]="['/internal_transfer_create']"> + Create </button>
         </div>
         <div class="col-sm-6">
           <div class="Search_Section">
@@ -33,9 +33,8 @@
             <tr>
               <th>S.no</th>
               <th>Ref no</th>
-              <th>Date</th>
-              <th>Partner</th>
-              <th>Destination location</th>
+              <th>From</th>
+              <th>To</th>
               <th>Status</th>
               <th>Action</th>
             </tr>
@@ -51,15 +50,11 @@
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> warehouse-1</span>
               </td>
               <td>
 
-                <span class="Style_3">aabbcc</span>
-              </td>
-              <td>
-
-                <span class="Style_3">sample location</span>
+                <span class="Style_3">warehouse-2</span>
               </td>
               <td>
                 <span class="Style_3">Draft</span>
@@ -78,15 +73,11 @@
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> warehouse-1</span>
               </td>
               <td>
 
-                <span class="Style_3">aabbcc</span>
-              </td>
-              <td>
-
-                <span class="Style_3">sample location</span>
+                <span class="Style_3">warehouse-2</span>
               </td>
               <td>
                 <span class="Style_3">Draft</span>
@@ -105,15 +96,11 @@
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> warehouse-1</span>
               </td>
               <td>
 
-                <span class="Style_3">aabbcc</span>
-              </td>
-              <td>
-
-                <span class="Style_3">sample location</span>
+                <span class="Style_3">warehouse-2</span>
               </td>
               <td>
                 <span class="Style_3">Draft</span>
@@ -132,15 +119,11 @@
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> warehouse-1</span>
               </td>
               <td>
 
-                <span class="Style_3">aabbcc</span>
-              </td>
-              <td>
-
-                <span class="Style_3">sample location</span>
+                <span class="Style_3">warehouse-2</span>
               </td>
               <td>
                 <span class="Style_3">Draft</span>
@@ -159,15 +142,11 @@
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> warehouse-1</span>
               </td>
               <td>
 
-                <span class="Style_3">aabbcc</span>
-              </td>
-              <td>
-
-                <span class="Style_3">sample location</span>
+                <span class="Style_3">warehouse-2</span>
               </td>
               <td>
                 <span class="Style_3">Draft</span>
@@ -186,15 +165,11 @@
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> warehouse-1</span>
               </td>
               <td>
 
-                <span class="Style_3">aabbcc</span>
-              </td>
-              <td>
-
-                <span class="Style_3">sample location</span>
+                <span class="Style_3">warehouse-2</span>
               </td>
               <td>
                 <span class="Style_3">Draft</span>
@@ -208,20 +183,14 @@
                 <span class="S_no"> 7 </span>
               </td>
               <td>
-
-                <span class="Style_3"> 4567</span>
+               <span class="Style_3"> 4567</span>
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> warehouse-1</span>
               </td>
               <td>
-
-                <span class="Style_3">aabbcc</span>
-              </td>
-              <td>
-
-                <span class="Style_3">sample location</span>
+            <span class="Style_3">warehouse-2</span>
               </td>
               <td>
                 <span class="Style_3">Draft</span>
