--- a/view/src/app/Components/Purchase/PurchaseOrders/purchase-orders-list/purchase-orders-list.component.html
+++ b/view/src/app/Components/Purchase/PurchaseOrders/purchase-orders-list/purchase-orders-list.component.html
@@ -17,7 +17,7 @@
                </div>
                <div class="row header_part">
                      <div class="col-sm-6">
-                       <button class="Create_Button" mat-raised-button [routerLink]="['/Purchase_Order_Create']"> + Create </button>
+                       <button class="Create_Button" mat-raised-button [routerLink]="['/inventory_deliveryorder_create']"> + Create </button>
                      </div>
                      <div class="col-sm-6">
                        <div class="Search_Section">
