--- a/view/src/app/Components/Inventory/To-Receive/to-receive-list/to-receive-list.component.html
+++ b/view/src/app/Components/Inventory/To-Receive/to-receive-list/to-receive-list.component.html
@@ -4,21 +4,21 @@
     <div class="container-fluid">
       <div class="Page_Identity">
         <div class="Page_Name">
-          <h5>Delivery Orders</h5>
+          <h5>To Receive</h5>
         </div>
         <div class="Page_Track">
           <ul>
             <li class="HeaderName">Inventory</li>
             <li class="arrow">>></li>
-            <li class="LinkName">Delivery Orders</li>
+            <li class="LinkName">To Receive</li>
             <li class="arrow">>></li>
-            <li>Delivery Orders List</li>
+            <li>To Receive List</li>
           </ul>
         </div>
       </div>
       <div class="row header_part">
         <div class="col-sm-6">
-          <button class="Create_Button" mat-raised-button [routerLink]="['/inventory_deliveryorder_create']"> + Create </button>
+          <button class="Create_Button" mat-raised-button [routerLink]="['/to_receive_create']"> + Create </button>
         </div>
         <div class="col-sm-6">
           <div class="Search_Section">
@@ -33,9 +33,9 @@
             <tr>
               <th>S.no</th>
               <th>Ref no</th>
+              <th>Source Location</th>
+              <th>Destination Location</th>
               <th>Date</th>
-              <th>Partner</th>
-              <th>Destination location</th>
               <th>Status</th>
               <th>Action</th>
             </tr>
@@ -51,18 +51,16 @@
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> aabbcc</span>
               </td>
               <td>
-
-                <span class="Style_3">aabbcc</span>
+                <span class="Style_3">loc-1</span>
               </td>
               <td>
-
-                <span class="Style_3">sample location</span>
+                <span class="Style_3">30/05/17</span>
               </td>
               <td>
-                <span class="Style_3">Draft</span>
+                <span class="Style_3">Approved</span>
               </td>
               <td>
                 <button mat-raised-button color="primary"> Action </button>
@@ -78,18 +76,16 @@
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> aabbcc</span>
               </td>
               <td>
-
-                <span class="Style_3">aabbcc</span>
+                <span class="Style_3">loc-1</span>
               </td>
               <td>
-
-                <span class="Style_3">sample location</span>
+                <span class="Style_3">30/05/17</span>
               </td>
               <td>
-                <span class="Style_3">Draft</span>
+                <span class="Style_3">Approved</span>
               </td>
               <td>
                 <button mat-raised-button color="primary"> Action </button>
@@ -105,18 +101,16 @@
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> aabbcc</span>
               </td>
               <td>
-
-                <span class="Style_3">aabbcc</span>
+                <span class="Style_3">loc-1</span>
               </td>
               <td>
-
-                <span class="Style_3">sample location</span>
+                <span class="Style_3">30/05/17</span>
               </td>
               <td>
-                <span class="Style_3">Draft</span>
+                <span class="Style_3">Approved</span>
               </td>
               <td>
                 <button mat-raised-button color="primary"> Action </button>
@@ -132,18 +126,16 @@
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> aabbcc</span>
               </td>
               <td>
-
-                <span class="Style_3">aabbcc</span>
+                <span class="Style_3">loc-1</span>
               </td>
               <td>
-
-                <span class="Style_3">sample location</span>
+                <span class="Style_3">30/05/17</span>
               </td>
               <td>
-                <span class="Style_3">Draft</span>
+                <span class="Style_3">Approved</span>
               </td>
               <td>
                 <button mat-raised-button color="primary"> Action </button>
@@ -159,18 +151,16 @@
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> aabbcc</span>
               </td>
               <td>
-
-                <span class="Style_3">aabbcc</span>
+                <span class="Style_3">loc-1</span>
               </td>
               <td>
-
-                <span class="Style_3">sample location</span>
+                <span class="Style_3">30/05/17</span>
               </td>
               <td>
-                <span class="Style_3">Draft</span>
+                <span class="Style_3">Approved</span>
               </td>
               <td>
                 <button mat-raised-button color="primary"> Action </button>
@@ -186,18 +176,16 @@
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> aabbcc</span>
               </td>
               <td>
-
-                <span class="Style_3">aabbcc</span>
+                <span class="Style_3">loc-1</span>
               </td>
               <td>
-
-                <span class="Style_3">sample location</span>
+                <span class="Style_3">30/05/17</span>
               </td>
               <td>
-                <span class="Style_3">Draft</span>
+                <span class="Style_3">Approved</span>
               </td>
               <td>
                 <button mat-raised-button color="primary"> Action </button>
@@ -213,18 +201,16 @@
               </td>
               <td>
 
-                <span class="Style_3"> 12/01/2017</span>
+                <span class="Style_3"> aabbcc</span>
               </td>
               <td>
-
-                <span class="Style_3">aabbcc</span>
+                <span class="Style_3">loc-1</span>
               </td>
               <td>
-
-                <span class="Style_3">sample location</span>
+                <span class="Style_3">30/05/17</span>
               </td>
               <td>
-                <span class="Style_3">Draft</span>
+                <span class="Style_3">Approved</span>
               </td>
               <td>
                 <button mat-raised-button color="primary"> Action </button>
