User Managemet and user permissions In progress

--- a/view/src/app/Components/Settings/UserManagement/user-management-list/user-management-list.component.html
+++ b/view/src/app/Components/Settings/UserManagement/user-management-list/user-management-list.component.html
@@ -50,7 +50,7 @@
                   <span class="Style_1"> {{item.Phone}} </span>
                </td>
                <td>
-                  <span class="Style_1"> {{item.User_Type}}  </span>
+                  <span class="Style_1"> {{item.User_Type.User_Type}}  </span>
                </td>
                <td>
                   <span class="Style_1"> {{item.updatedAt | date:'medium'}} </span>
