--- a/view/src/app/models/settings/user_management/model-user-create-user-management/model-user-create-user-management.component.html
+++ b/view/src/app/models/settings/user_management/model-user-create-user-management/model-user-create-user-management.component.html
@@ -13,28 +13,27 @@
                   <span *ngIf="Form.controls['Name'].errors.required">Name is required</span>
                </p>
             </div><br>
-            <div class="col-sm-6 Form_Input" [ngClass]="{'Form_Err': !Form.controls['User_Name'].pristine && (Form.controls['User_Name'].errors || (UserNameValidated &&!User_NameAvailable)), 'Form_Success': Form.controls['User_Name'].valid && !Form.controls['User_Name'].pristine && User_NameAvailable }">
+            <div class="col-sm-6 Form_Input" [ngClass]="{'Form_Err': !Form.controls['User_Name'].pristine && Form.controls['User_Name'].errors, 'Form_Success': Form.controls['User_Name'].valid && !Form.controls['User_Name'].pristine }">
                <label> User Name :</label>
-               <input type="text" formControlName="User_Name" (ngModelChange)="User_Name_Change()" (blur)="UserNameValidate()"> 
+               <input type="text" formControlName="User_Name"> 
                <p class="error" *ngIf="Form.controls['User_Name'].errors && !Form.controls['User_Name'].pristine">
                   <span *ngIf="Form.controls['User_Name'].errors.required"> User Name is required</span>
-               </p>
-               <p class="error" *ngIf="UserNameValidated && !User_NameAvailable && Form.controls['User_Name'].errors === null && !Form.controls['User_Name'].pristine">
-                  <span> User Name Already Exist</span>
+                  <span *ngIf="Form.controls['User_Name'].errors.UserName_NotAvailable"> User Name Already Exist</span>
                </p>
             </div>
             <div class="col-sm-6 Form_Input" [ngClass]="{'Form_Err': Form.controls['User_Password'].errors && !Form.controls['User_Password'].pristine, 'Form_Success': Form.controls['User_Password'].valid && !Form.controls['User_Password'].pristine }">
                <label> User Password :</label>
-               <input type="text" formControlName="User_Password" >
+               <input type="password" formControlName="User_Password" >
                <p class="error" *ngIf="Form.controls['User_Password'].errors && !Form.controls['User_Password'].pristine">
                   <span *ngIf="Form.controls['User_Password'].errors.required"> User Password is required</span>
                </p>
             </div>
             <div class="col-sm-6 Form_Input" [ngClass]="{'Form_Err': Form.controls['Email'].errors && !Form.controls['Email'].pristine, 'Form_Success': Form.controls['Email'].valid && !Form.controls['Email'].pristine }">
                <label> Email :</label>
-               <input type="text" formControlName="Email" >
+               <input type="email" formControlName="Email" >
                <p class="error" *ngIf="Form.controls['Email'].errors && !Form.controls['Email'].pristine">
                   <span *ngIf="Form.controls['Email'].errors.required"> Email is required</span>
+                  <span *ngIf="Form.controls['Email'].errors.email"> Email must be a valid email address </span>
                </p>
             </div>
             <div class="col-sm-6 Form_Input">
@@ -53,16 +52,25 @@
             <div class="col-sm-6 Form_Select" *ngIf="ShowReportsTo">
                <label>Report To :</label>
                <ng-select class="NgSelect" [searchable]="true" formControlName="Reports_To">
-                  <ng-option *ngFor="let User of _ReportUsers" [value]="User">{{User.User_Name}}</ng-option>
+                  <ng-option *ngFor="let User of _ReportUsers" [value]="User">{{User.Name}}</ng-option>
                </ng-select>
                <p class="error" *ngIf="Form.controls['Reports_To'].errors && !Form.controls['Reports_To'].pristine">
                   <span *ngIf="Form.controls['Reports_To'].errors.required"> Reporting User is required</span>
+               </p>
+            </div>
+            <div class="col-sm-6 Form_Select" *ngIf="Form.controls['User_Type'].value !== null">
+               <label> Permissions :</label>
+               <ng-select class="NgSelect" [multiple]="true" [hideSelected]="true" [searchable]="true" formControlName="AccessPermissions_Groups">
+                  <ng-option *ngFor="let Group of _Permissions" [value]="Group">{{Group.Group_Name}}</ng-option>
+               </ng-select>
+               <p class="error" *ngIf="Form.controls['AccessPermissions_Groups'].errors && !Form.controls['AccessPermissions_Groups'].pristine">
+                  <span *ngIf="Form.controls['AccessPermissions_Groups'].errors.required"> User Access Permissions is required</span>
                </p>
             </div>
          </div>
       </Form>
    </div>
    <div class="Model_Footer">
-      <button mat-raised-button (click)="submit()" [disabled]="Form.invalid" color="primary" > Submit </button>
+      <button mat-raised-button (click)="submit()" [disabled]="!Form.valid" color="primary" > Submit </button>
    </div>
 </div>
