--- a/view/src/assets/Over-Write-Css/ng-select-overwrite.css
+++ b/view/src/assets/Over-Write-Css/ng-select-overwrite.css
@@ -1,3 +1,4 @@
+/* Single Select */
 .ng-select.NgSelect {
    border:0px;
    min-height: 0px;
@@ -52,4 +53,46 @@
    font-size: 14px;
     font-weight: 400;
     color: #516570;
+}
+
+
+
+/* Multiple Select */
+.ng-select-multiple.NgSelect .ng-select-container{
+    height: auto;
+    min-height: 37px;
+ }
+.ng-select.ng-select-multiple.NgSelect .ng-select-container .ng-value-container{
+    padding-left: 5px;
+    padding-top: 5px;
+}
+.ng-select.ng-select-multiple.NgSelect .ng-select-container .ng-value-container .ng-value{
+    font-size: 0.9em;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    background-color: #ffffff;
+    border: 1px solid #4e6a7a75;
+    padding: 3px 7px;
+    letter-spacing: 0.2px;
+    border-radius: 25px;
+}
+.ng-select.ng-select-multiple.NgSelect .ng-select-container .ng-value-container .ng-value .ng-value-icon.left{
+    font-weight: 800;
+    font-size: 17px;
+    line-height: 17px;
+    height: 21px;
+    color: #8f8f8f;
+    margin: 0px;
+    float: right;
+    border-radius: 20px;
+    background-color: #d8d8d8;
+}
+.ng-select.ng-select-multiple.NgSelect .ng-select-container .ng-value-container .ng-value .ng-value-label{
+    display: inline-block;
+    padding: 0px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #4e6a7a;
+    letter-spacing: 0.4px;
+    padding-right: 5px;
 }
