HR Design and Some Design Changes

--- a/view/src/app/Components/CRM/Customers/Crm-Customers-View/SubComponents/activity-crm-customers-view/activity-crm-customers-view.component.html
+++ b/view/src/app/Components/CRM/Customers/Crm-Customers-View/SubComponents/activity-crm-customers-view/activity-crm-customers-view.component.html
@@ -1,6 +1,6 @@
 <div class="row header_part">
   <div class="col-sm-6">
-    <button class="Create_Button" mat-raised-button (click)="Createbranch()"> + Create </button>
+    <button class="Create_Button" mat-raised-button (click)="CreateActivity()"> + Create </button>
   </div>
   <div class="col-sm-6">
     <div class="Search_Section">
@@ -47,13 +47,13 @@
           <span class="Style_1">green</span>
         </td>
         <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+          <button (click)="ViewActivity()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button (click)="CreateActivity()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+          <button (click)="DeleteActivity()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
             <i class="material-icons">delete_forever</i>
           </button>
         </td>
@@ -81,13 +81,13 @@
           <span class="Style_1">blue</span>
         </td>
         <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+          <button (click)="ViewActivity()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button (click)="CreateActivity()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+          <button (click)="DeleteActivity()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
             <i class="material-icons">delete_forever</i>
           </button>
         </td>
@@ -115,13 +115,13 @@
           <span class="Style_1">red</span>
         </td>
         <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+          <button (click)="ViewActivity()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button (click)="CreateActivity()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+          <button (click)="DeleteActivity()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
             <i class="material-icons">delete_forever</i>
           </button>
         </td>
@@ -149,13 +149,13 @@
           <span class="Style_1">blue</span>
         </td>
         <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+          <button (click)="ViewActivity()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button (click)="CreateActivity()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+          <button (click)="DeleteActivity()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
             <i class="material-icons">delete_forever</i>
           </button>
         </td>
@@ -183,13 +183,13 @@
           <span class="Style_1">white</span>
         </td>
         <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+          <button (click)="ViewActivity()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button (click)="CreateActivity()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+          <button (click)="DeleteActivity()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
             <i class="material-icons">delete_forever</i>
           </button>
         </td>
