--- a/view/src/app/Components/CRM/Customers/Crm-Customers-View/SubComponents/invoice-crm-customers-view/invoice-crm-customers-view.component.html
+++ b/view/src/app/Components/CRM/Customers/Crm-Customers-View/SubComponents/invoice-crm-customers-view/invoice-crm-customers-view.component.html
@@ -1,6 +1,6 @@
 <div class="row header_part">
   <div class="col-sm-6">
-    <button class="Create_Button" mat-raised-button (click)="Createbranch()"> + Create </button>
+    <button class="Create_Button" mat-raised-button [routerLink]="['/crm_invoice_create']"> + Create </button>
   </div>
   <div class="col-sm-6">
     <div class="Search_Section">
@@ -50,7 +50,7 @@
           <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button [routerLink]="['/crm_invoice_create']" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
           <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
@@ -84,7 +84,7 @@
           <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button [routerLink]="['/crm_invoice_create']" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
           <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
@@ -118,7 +118,7 @@
           <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button [routerLink]="['/crm_invoice_create']" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
           <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
@@ -152,7 +152,7 @@
           <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button [routerLink]="['/crm_invoice_create']" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
           <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
@@ -186,7 +186,7 @@
           <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button [routerLink]="['/crm_invoice_create']" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
           <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
@@ -220,7 +220,7 @@
           <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button [routerLink]="['/crm_invoice_create']" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
           <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
