--- a/view/src/app/Components/CRM/Customers/Crm-Customers-View/SubComponents/payment-crm-customers-view/payment-crm-customers-view.component.html
+++ b/view/src/app/Components/CRM/Customers/Crm-Customers-View/SubComponents/payment-crm-customers-view/payment-crm-customers-view.component.html
@@ -1,6 +1,6 @@
 <div class="row header_part">
   <div class="col-sm-6">
-    <button class="Create_Button" mat-raised-button (click)="Createbranch()"> + Create </button>
+    <button class="Create_Button" mat-raised-button (click)="CreatePayments()"> + Create </button>
   </div>
   <div class="col-sm-6">
     <div class="Search_Section">
@@ -43,13 +43,13 @@
           <span class="Style_1">red</span>
         </td>
         <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+          <button (click)="ViewPayments()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button (click)="CreatePayments()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+          <button (click)="DeletePayments()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
             <i class="material-icons">delete_forever</i>
           </button>
         </td>
@@ -74,13 +74,13 @@
           <span class="Style_1">red</span>
         </td>
         <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+          <button (click)="ViewPayments()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button (click)="CreatePayments()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+          <button (click)="DeletePayments()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
             <i class="material-icons">delete_forever</i>
           </button>
         </td>
@@ -105,13 +105,13 @@
           <span class="Style_1">red</span>
         </td>
         <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+          <button (click)="ViewPayments()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button (click)="CreatePayments()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+          <button (click)="DeletePayments()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
             <i class="material-icons">delete_forever</i>
           </button>
         </td>
@@ -136,13 +136,13 @@
           <span class="Style_1">red</span>
         </td>
         <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+          <button (click)="ViewPayments()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button (click)="CreatePayments()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+          <button (click)="DeletePayments()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
             <i class="material-icons">delete_forever</i>
           </button>
         </td>
@@ -167,13 +167,13 @@
           <span class="Style_1">red</span>
         </td>
         <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+          <button (click)="ViewPayments()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button (click)="CreatePayments()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+          <button (click)="DeletePayments()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
             <i class="material-icons">delete_forever</i>
           </button>
         </td>
@@ -198,13 +198,13 @@
           <span class="Style_1">red</span>
         </td>
         <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+          <button (click)="ViewPayments()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button (click)="CreatePayments()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+          <button (click)="DeletePayments()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
             <i class="material-icons">delete_forever</i>
           </button>
         </td>
