--- a/view/src/app/Components/CRM/Customers/Crm-Customers-View/SubComponents/others-crm-customers-view/others-crm-customers-view.component.html
+++ b/view/src/app/Components/CRM/Customers/Crm-Customers-View/SubComponents/others-crm-customers-view/others-crm-customers-view.component.html
@@ -1,214 +1,49 @@
-<div class="row header_part">
-  <div class="col-sm-6">
-    <button class="Create_Button" mat-raised-button (click)="Createbranch()"> + Create </button>
-  </div>
-  <div class="col-sm-6">
-    <div class="Search_Section">
-      <input type="text" placeholder="Search.." name="search">
-      <i class="material-icons">search</i>
-    </div>
-  </div>
+<div class="about_section">
+  <div class="row About_Section">
+     <div class="col-sm-12">
+        <div class="row">
+           <div class="col-sm-4 Form_Input">
+               <label>GST No:</label>
+            </div>
+           <div class="col-sm-4 Form_Input">
+              <input type="text">
+           </div>
+        </div>
+        <div class="row">
+         <div class="col-sm-4 Form_Input">
+             <label>TIN No:</label>
+          </div>
+         <div class="col-sm-4 Form_Input">
+            <input type="text">
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-sm-4 Form_Input">
+             <label>CST No:</label>
+          </div>
+         <div class="col-sm-4 Form_Input">
+            <input type="text">
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-sm-4 Form_Input">
+             <label>Service Tax Code:</label>
+          </div>
+         <div class="col-sm-4 Form_Input">
+            <input type="text">
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-sm-4 Form_Input">
+             <label>PAN No:</label>
+          </div>
+         <div class="col-sm-4 Form_Input">
+            <input type="text">
+         </div>
+      </div>
+   </div>
+   </div>
 </div>
-<div class="Table_Section">
-  <table>
-    <thead>
-      <tr>
-        <th>S.no</th>
-        <th>GST NO </th>
-        <th>TIN NO</th>
-        <th>CST NO</th>
-        <th>Service Tax Code</th>
-        <th>Pan No</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          <span class="S_no"> 1 </span>
-        </td>
-        <td>
-          <span class="Style_1">GST_123</span>
-        </td>
-        <td>
-          <span class="Style_1">TIN_567</span>
-        </td>
-        <td>
-          <span class="Style_1"> CST_345</span>
-        </td>
-        <td>
-          <span class="Style_1">CODE005654</span>
-        </td>
-        <td>
-          <span class="Style_1">5656767</span>
-        </td>
-        <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
-            <i class="material-icons">zoom_in</i>
-          </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
-            <i class="material-icons">edit</i>
-          </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
-            <i class="material-icons">delete_forever</i>
-          </button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <span class="S_no"> 1 </span>
-        </td>
-        <td>
-          <span class="Style_1">GST_123</span>
-        </td>
-        <td>
-          <span class="Style_1">TIN_567</span>
-        </td>
-        <td>
-          <span class="Style_1"> CST_345</span>
-        </td>
-        <td>
-          <span class="Style_1">CODE005654</span>
-        </td>
-        <td>
-          <span class="Style_1">5656767</span>
-        </td>
-        <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
-            <i class="material-icons">zoom_in</i>
-          </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
-            <i class="material-icons">edit</i>
-          </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
-            <i class="material-icons">delete_forever</i>
-          </button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <span class="S_no"> 1 </span>
-        </td>
-        <td>
-          <span class="Style_1">GST_123</span>
-        </td>
-        <td>
-          <span class="Style_1">TIN_567</span>
-        </td>
-        <td>
-          <span class="Style_1"> CST_345</span>
-        </td>
-        <td>
-          <span class="Style_1">CODE005654</span>
-        </td>
-        <td>
-          <span class="Style_1">5656767</span>
-        </td>
-        <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
-            <i class="material-icons">zoom_in</i>
-          </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
-            <i class="material-icons">edit</i>
-          </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
-            <i class="material-icons">delete_forever</i>
-          </button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <span class="S_no"> 1 </span>
-        </td>
-        <td>
-          <span class="Style_1">GST_123</span>
-        </td>
-        <td>
-          <span class="Style_1">TIN_567</span>
-        </td>
-        <td>
-          <span class="Style_1"> CST_345</span>
-        </td>
-        <td>
-          <span class="Style_1">CODE005654</span>
-        </td>
-        <td>
-          <span class="Style_1">5656767</span>
-        </td>
-        <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
-            <i class="material-icons">zoom_in</i>
-          </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
-            <i class="material-icons">edit</i>
-          </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
-            <i class="material-icons">delete_forever</i>
-          </button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <span class="S_no"> 1 </span>
-        </td>
-        <td>
-          <span class="Style_1">GST_123</span>
-        </td>
-        <td>
-          <span class="Style_1">TIN_567</span>
-        </td>
-        <td>
-          <span class="Style_1"> CST_345</span>
-        </td>
-        <td>
-          <span class="Style_1">CODE005654</span>
-        </td>
-        <td>
-          <span class="Style_1">5656767</span>
-        </td>
-        <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
-            <i class="material-icons">zoom_in</i>
-          </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
-            <i class="material-icons">edit</i>
-          </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
-            <i class="material-icons">delete_forever</i>
-          </button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <span class="S_no"> 1 </span>
-        </td>
-        <td>
-          <span class="Style_1">GST_123</span>
-        </td>
-        <td>
-          <span class="Style_1">TIN_567</span>
-        </td>
-        <td>
-          <span class="Style_1"> CST_345</span>
-        </td>
-        <td>
-          <span class="Style_1">CODE005654</span>
-        </td>
-        <td>
-          <span class="Style_1">5656767</span>
-        </td>
-        <td>
-          <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
-            <i class="material-icons">zoom_in</i>
-          </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
-            <i class="material-icons">edit</i>
-          </button>
-          <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
-            <i class="material-icons">delete_forever</i>
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+
+
+ 
