--- a/view/src/app/Components/CRM/Customers/Crm-Customers-View/SubComponents/quote-crm-customers-view/quote-crm-customers-view.component.html
+++ b/view/src/app/Components/CRM/Customers/Crm-Customers-View/SubComponents/quote-crm-customers-view/quote-crm-customers-view.component.html
@@ -1,6 +1,6 @@
 <div class="row header_part">
   <div class="col-sm-6">
-    <button class="Create_Button" mat-raised-button (click)="Createbranch()"> + Create </button>
+    <button class="Create_Button" mat-raised-button [routerLink]="['/crm_quotations_create']"> + Create </button>
   </div>
   <div class="col-sm-6">
     <div class="Search_Section">
@@ -46,7 +46,7 @@
           <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button [routerLink]="['/crm_quotations_create']" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
           <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
@@ -77,7 +77,7 @@
           <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button [routerLink]="['/crm_quotations_create']" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
           <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
@@ -108,7 +108,7 @@
           <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button [routerLink]="['/crm_quotations_create']" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
           <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
@@ -139,7 +139,7 @@
           <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button [routerLink]="['/crm_quotations_create']" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
           <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
@@ -170,7 +170,7 @@
           <button class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
             <i class="material-icons">zoom_in</i>
           </button>
-          <button class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+          <button [routerLink]="['/crm_quotations_create']" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
             <i class="material-icons">edit</i>
           </button>
           <button class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
